--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,12 @@
     <color name="colorAccent">#03DAC5</color>
 
     <!--    Duy define-->
-    <color name="appBackgroundColor">#073b4c</color>
+<!--    <color name="appBackgroundColor">#F4F1DE</color>-->
+     <color name="appBackgroundColor">#F4F1DE</color>
     <color name="appColorDanger">#ef476f</color>
-    <color name="appItemBg1">#2196F3</color>
-    <color name="appItemBg2">#8ecae6</color>
+    <color name="appItemBg1">#E07A5F</color>
+    <color name="appItemBg2">#81B29A</color>
     <color name="appColorWhite">#ffffff</color>
+    <color name="appTextColor">#e1e1e1</color>
+    <color name="appYellowRetro">#e09f3e</color>
 </resources>
